<resources>
    <string name="app_name">PlanNUS</string>
    <string name="title_activity_login_user">LoginUser</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings used for Main Activity-->
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="plannus_logo">PlanNUS Logo</string>
    <string name="emailIcon">EmailIcon</string>
    <string name="pwdIcon">Password Icon</string>


    <!-- Strings used for Register User Activity-->
    <string name="RegisterUser">REGISTER USER</string>
    <string name="RegisterEmail">Email</string>
    <string name="RegisterAge">Age</string>
    <string name="FullName">Full Name</string>

    <!-- Strings used for Content Main Activity-->
    <string name="Announcements">Announcements</string>
    <string name="Calendar">My Calendar</string>
    <string name="CalendarImg">My Calendar Image</string>
    <string name="Timetable">My Timetable</string>
    <string name="TimetableImg">My Timetable Image</string>
    <string name="ToDoList">My Tasks</string>
    <string name="ToDoListImg">My Tasks Image</string>
    <string name="calendarDesc">Calendar Image</string>
    <string name="timetableDesc">Timetable Image</string>
    <string name="nusModsDesc">NUSMods Image</string>
    <string name="hello">Hi NAME</string>
    <string name="WelcomeMsg">Welcome Back !</string>
    <string name="appIcon">App Icon</string>

    <!-- Strings used for Settings Activity-->
    <string-array name="AY_array">
        <item>2016-2017</item>
        <item>2017-2018</item>
        <item>2018-2019</item>
        <item>2019-2020</item>
        <item>2020-2021</item>
        <item>2021-2022</item>
        <item>2022-2023</item>
    </string-array>

    <string-array name="SEM_array">
        <item>1</item>
        <item>2</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>