<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContentMainActivity">


    <TextView
        android:id="@+id/WelcomeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:fontFamily="casual"
        android:text="@string/WelcomeBack"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="383dp"
        android:layout_height="208dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="48sp">
    </HorizontalScrollView>

    <TextView
        android:id="@+id/calenderButtonMain"
        android:layout_width="209sp"
        android:layout_height="31sp"
        android:layout_marginTop="4sp"
        android:text="@string/Calendar"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <ImageButton
        android:contentDescription="@string/calendarDesc"
        android:id="@+id/imageButton"
        android:layout_width="408sp"
        android:layout_height="103sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calenderButtonMain"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="209sp"
        android:layout_height="36sp"
        android:layout_marginTop="8sp"
        android:text="@string/Timetable"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <ImageButton
        android:contentDescription="@string/timetableDesc"
        android:id="@+id/imageButton2"
        android:layout_width="404sp"
        android:layout_height="91sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="199sp"
        android:layout_height="38sp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="196dp"
        android:text="@string/ToDoList"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

    <ImageButton
        android:contentDescription="@string/nusModsDesc"
        android:id="@+id/imageButton3"
        android:layout_width="409dp"
        android:layout_height="121dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_launcher_background" />
</androidx.constraintlayout.widget.ConstraintLayout>